feat(backend/model): define sftp_server schema
