# server/docs/openapi.yaml
@@ -232,9 +232,16 @@ components:
         _id:
           type: integer
           format: int64
-        serverName:
+        host:
           type: string
-        address:
+        port:
+          type: integer
+          format: int64
+        user:
           type: string
+        password:
+          type: string
+        certificate_path:
+          type: string        
         account:
           $ref: '#/components/schemas/Account'
